Update tokenizer script with JVM options.
svn path=/trunk/javanlp/; revision=41012